퀴즈 화면 구현

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "chorme_launch",
             "request": "launch",
             "type": "dart",
-            "args": ["-d","chrome"]
+            "args": ["-d","chrome","--no-sound-null-safety"]
         },
         {
             "name": "android_launch",
